# swagger.yaml
@@ -22,39 +22,35 @@ paths:
               allOf:
               - $ref: '#/components/schemas/RegisterUserProfileRequest'
               - example:
-                  firstname: Walter
-                  secondname: Vusi
-                  surname: dlamini
-                  profilePicture: Vusi's profile picture
-                  phoneNumber: '1234567902'
-                  email: dlamini@gmail.com
-                  password: dlamini
+                  firstname: richard
+                  secondname: michael
+                  surname: john
+                  profilePicture: https://images.pexels.com/photos/10139203/pexels-photo-10139203.jpeg?auto=compress&cs=tinysrgb&w=600
+                  phoneNumber: '1234567907'
+                  email: john1234@gmail.com
+                  password: michaelJohn
                   AcceptTermsAndConditions: Yes
                   locationOrAddress: Kimberley,South Africa
                   birthday: 1996/07/12
                   educationStatus: Tertiary
                   gender: male
                   wallet: Capitec Wallet
-                  interests: Fashion And Beauty
-                  resetToken: ''
-                  resetTokenExpiration: ''
+                  interests: Food And Drinks
             example:
-              firstname: Walter
-              secondname: Vusi
-              surname: dlamini
-              profilePicture: Vusi's profile picture
-              phoneNumber: '1234567902'
-              email: dlamini@gmail.com
-              password: dlamini
+              firstname: richard
+              secondname: michael
+              surname: john
+              profilePicture: https://images.pexels.com/photos/10139203/pexels-photo-10139203.jpeg?auto=compress&cs=tinysrgb&w=600
+              phoneNumber: '1234567907'
+              email: john1234@gmail.com
+              password: michaelJohn
               AcceptTermsAndConditions: Yes
               locationOrAddress: Kimberley,South Africa
               birthday: 1996/07/12
               educationStatus: Tertiary
               gender: male
               wallet: Capitec Wallet
-              interests: Fashion And Beauty
-              resetToken: ''
-              resetTokenExpiration: ''
+              interests: Food And Drinks
         required: true
       responses:
         '200':
@@ -310,9 +306,6 @@ paths:
           description: ''
           headers: {}
       deprecated: false
-      servers:
-      - url: https://adlinc-api.onrender.com/api/slaschapp
-        variables: {}
   /search:
     get:
       tags:
@@ -675,13 +668,13 @@ paths:
               allOf:
               - $ref: '#/components/schemas/RegisterBusinessOwnerProfileRequest'
               - example:
-                  firstname: kwherb
-                  secondname: hgfdks
-                  surname: rbggrjd
+                  firstname: joseph
+                  secondname: cyril
+                  surname: khuzwayo
                   profilePicture: photo string
-                  phoneNumber: '0812344915'
-                  email: teboho1@gmail.com
-                  password: teboho12
+                  phoneNumber: '0812344965'
+                  email: khuzwayo@gmail.com
+                  password: joseph12
                   AcceptTermsAndConditions: Yes
                   locationOrAddress: Johannesburg,South Africa
                   birthday: 27/09/1985
@@ -691,13 +684,13 @@ paths:
                   resetToken: generated by forgot password endpoint
                   resetTokenExpiration: generated by forgot password endpoint
             example:
-              firstname: kwherb
-              secondname: hgfdks
-              surname: rbggrjd
+              firstname: joseph
+              secondname: cyril
+              surname: khuzwayo
               profilePicture: photo string
-              phoneNumber: '0812344915'
-              email: teboho1@gmail.com
-              password: teboho12
+              phoneNumber: '0812344965'
+              email: khuzwayo@gmail.com
+              password: joseph12
               AcceptTermsAndConditions: Yes
               locationOrAddress: Johannesburg,South Africa
               birthday: 27/09/1985
@@ -838,22 +831,6 @@ paths:
           description: ''
           headers: {}
       deprecated: false
-      servers:
-      - url: https://adlinc-api.onrender.com/api/slaschapp
-        variables: {}
-  /admin/auctions:
-    get:
-      tags:
-      - Admin
-      summary: Get All Auctions
-      operationId: GetAllAuctions1
-      parameters: []
-      responses:
-        '200':
-          description: ''
-          headers: {}
-      deprecated: false
-      security: []
       servers:
       - url: https://adlinc-api.onrender.com/api/slaschapp
         variables: {}
@@ -1063,7 +1040,23 @@ paths:
       servers:
       - url: https://adlinc-api.onrender.com/api/slaschapp
         variables: {}
-  /auction/{auctionID}/bait:
+  /admin/auctions:
+    get:
+      tags:
+      - Admin
+      summary: Get All Auctions
+      operationId: GetAllAuctions1
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          headers: {}
+      deprecated: false
+      security: []
+      servers:
+      - url: https://adlinc-api.onrender.com/api/slaschapp
+        variables: {}
+  /business/auction/{auctionID}/bait/create:
     post:
       tags:
       - Bait Plants
@@ -1085,68 +1078,81 @@ paths:
               allOf:
               - $ref: '#/components/schemas/CreateBaitPlantRequest'
               - example:
-                  name: Data Scientist
-                  baitPlantDescription: Python,SQL and Analytics
-                  checkInStoreAvailability: No
-                  percentageDiscount: 14%
-                  price: R15
-                  color: Purple
-                  size: Small
+                  baitPlantName: Fruits Baits
+                  baitPlantDescription: Fruits Baits For Everyone
+                  checkInStoreAvailability: Yes
+                  percentageDiscount: 13%
+                  price: R800
+                  color: black
+                  size: large
                   photos:
-                  - purple image
-                  - red image
-                  - blue image
+                  - https://images.pexels.com/photos/1128678/pexels-photo-1128678.jpeg?auto=compress&cs=tinysrgb&w=600
+                  - https://images.pexels.com/photos/70746/strawberries-red-fruit-royalty-free-70746.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1
+                  - https://images.pexels.com/photos/672101/pexels-photo-672101.jpeg?auto=compress&cs=tinysrgb&w=600
+                  - https://images.pexels.com/photos/1153655/pexels-photo-1153655.jpeg?auto=compress&cs=tinysrgb&w=600
             example:
-              name: Data Scientist
-              baitPlantDescription: Python,SQL and Analytics
-              checkInStoreAvailability: No
-              percentageDiscount: 14%
-              price: R15
-              color: Purple
-              size: Small
+              baitPlantName: Fruits Baits
+              baitPlantDescription: Fruits Baits For Everyone
+              checkInStoreAvailability: Yes
+              percentageDiscount: 13%
+              price: R800
+              color: black
+              size: large
               photos:
-              - purple image
-              - red image
-              - blue image
+              - https://images.pexels.com/photos/1128678/pexels-photo-1128678.jpeg?auto=compress&cs=tinysrgb&w=600
+              - https://images.pexels.com/photos/70746/strawberries-red-fruit-royalty-free-70746.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1
+              - https://images.pexels.com/photos/672101/pexels-photo-672101.jpeg?auto=compress&cs=tinysrgb&w=600
+              - https://images.pexels.com/photos/1153655/pexels-photo-1153655.jpeg?auto=compress&cs=tinysrgb&w=600
         required: true
       responses:
         '200':
           description: ''
           headers: {}
       deprecated: false
+      security:
+      - bearer: []
       servers:
       - url: https://adlinc-api.onrender.com/api/slaschapp
         variables: {}
-  /bait/all:
+  /business/auction/{auctionID}/bait:
     get:
       tags:
       - Bait Plants
       summary: Get All Bait Plants
       operationId: GetAllBaitPlants1
-      parameters: []
-      responses:
-        '200':
-          description: ''
-          headers: {}
-      deprecated: false
-      servers:
-      - url: https://adlinc-api.onrender.com/api/slaschapp
-        variables: {}
-  /auction/{auctionID}/bait/{baitID}:
-    get:
-      tags:
-      - Bait Plants
-      summary: Get Single Bait Plant
-      operationId: GetSingleBaitPlant
       parameters:
-      - name: baitID
+      - name: auctionID
         in: path
         description: ''
         required: true
         style: simple
         schema:
           type: string
+      responses:
+        '200':
+          description: ''
+          headers: {}
+      deprecated: false
+      security:
+      - bearer: []
+      servers:
+      - url: https://adlinc-api.onrender.com/api/slaschapp
+        variables: {}
+  /business/auction/{auctionID}/bait/{baitID}:
+    get:
+      tags:
+      - Bait Plants
+      summary: Get Single Bait Plant
+      operationId: GetSingleBaitPlant
+      parameters:
       - name: auctionID
+        in: path
+        description: ''
+        required: true
+        style: simple
+        schema:
+          type: string
+      - name: baitID
         in: path
         description: ''
         required: true
@@ -1167,14 +1173,14 @@ paths:
       summary: Update Bait Plant
       operationId: UpdateBaitPlant
       parameters:
-      - name: baitID
+      - name: auctionID
         in: path
         description: ''
         required: true
         style: simple
         schema:
           type: string
-      - name: auctionID
+      - name: baitID
         in: path
         description: ''
         required: true
@@ -1223,14 +1229,14 @@ paths:
       summary: Delete Single Bait
       operationId: DeleteSingleBait
       parameters:
-      - name: baitID
+      - name: auctionID
         in: path
         description: ''
         required: true
         style: simple
         schema:
           type: string
-      - name: auctionID
+      - name: baitID
         in: path
         description: ''
         required: true
@@ -1252,6 +1258,130 @@ paths:
       summary: Get All Users
       operationId: GetAllUsers2
       parameters: []
+      responses:
+        '200':
+          description: ''
+          headers: {}
+      deprecated: false
+      servers:
+      - url: https://adlinc-api.onrender.com/api/slaschapp
+        variables: {}
+  /cart/bait/{cartID}:
+    get:
+      tags:
+      - Cart
+      summary: Get Cart
+      operationId: GetCart
+      parameters:
+      - name: cartID
+        in: path
+        description: ''
+        required: true
+        style: simple
+        schema:
+          type: string
+      responses:
+        '200':
+          description: ''
+          headers: {}
+      deprecated: false
+      servers:
+      - url: https://adlinc-api.onrender.com/api/slaschapp
+        variables: {}
+  /cart/bait/remove/{baitID}:
+    delete:
+      tags:
+      - Cart
+      summary: Remove  Bait From Cart
+      operationId: RemoveBaitFromCart
+      parameters:
+      - name: baitID
+        in: path
+        description: ''
+        required: true
+        style: simple
+        schema:
+          type: string
+      responses:
+        '200':
+          description: ''
+          headers: {}
+      deprecated: false
+      servers:
+      - url: https://adlinc-api.onrender.com/api/slaschapp
+        variables: {}
+  /cart/bait/decrement/{cartID}:
+    get:
+      tags:
+      - Cart
+      summary: Decrement Bait Quantity
+      operationId: DecrementBaitQuantity
+      parameters:
+      - name: cartID
+        in: path
+        description: ''
+        required: true
+        style: simple
+        schema:
+          type: string
+      responses:
+        '200':
+          description: ''
+          headers: {}
+      deprecated: false
+      servers:
+      - url: https://adlinc-api.onrender.com/api/slaschapp
+        variables: {}
+  /cart/bait/count:
+    get:
+      tags:
+      - Cart
+      summary: Get Cart Count
+      operationId: GetCartCount
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          headers: {}
+      deprecated: false
+      servers:
+      - url: https://adlinc-api.onrender.com/api/slaschapp
+        variables: {}
+  /cart/bait/{userID}/{baitID}:
+    post:
+      tags:
+      - Cart
+      summary: Add Bait To Cart
+      operationId: AddBaitToCart
+      parameters:
+      - name: userID
+        in: path
+        description: ''
+        required: true
+        style: simple
+        schema:
+          type: string
+      - name: baitID
+        in: path
+        description: ''
+        required: true
+        style: simple
+        schema:
+          type: string
+      requestBody:
+        description: ''
+        content:
+          application/json:
+            schema:
+              allOf:
+              - $ref: '#/components/schemas/AddBaitToCartRequest'
+              - example:
+                  totalPrice: 6
+                  quantity: 3
+            example:
+              totalPrice: 6
+              quantity: 3
+        required: true
       responses:
         '200':
           description: ''
@@ -1362,6 +1492,30 @@ paths:
       servers:
       - url: https://adlinc-api.onrender.com/api/slaschapp
         variables: {}
+  /transaction/bait/account:
+    post:
+      tags:
+      - Payments
+      summary: Add Bank Card
+      operationId: AddBankCard
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          headers: {}
+      deprecated: false
+  /transaction/bait/transfer:
+    post:
+      tags:
+      - Payments
+      summary: Transfer Funds
+      operationId: TransferFunds
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          headers: {}
+      deprecated: false
 components:
   schemas:
     RegisterUserProfileRequest:
@@ -1381,8 +1535,6 @@ components:
       - gender
       - wallet
       - interests
-      - resetToken
-      - resetTokenExpiration
       type: object
       properties:
         firstname:
@@ -1413,27 +1565,21 @@ components:
           type: string
         interests:
           type: string
-        resetToken:
-          type: string
-        resetTokenExpiration:
-          type: string
       example:
-        firstname: Walter
-        secondname: Vusi
-        surname: dlamini
-        profilePicture: Vusi's profile picture
-        phoneNumber: '1234567902'
-        email: dlamini@gmail.com
-        password: dlamini
+        firstname: richard
+        secondname: michael
+        surname: john
+        profilePicture: https://images.pexels.com/photos/10139203/pexels-photo-10139203.jpeg?auto=compress&cs=tinysrgb&w=600
+        phoneNumber: '1234567907'
+        email: john1234@gmail.com
+        password: michaelJohn
         AcceptTermsAndConditions: Yes
         locationOrAddress: Kimberley,South Africa
         birthday: 1996/07/12
         educationStatus: Tertiary
         gender: male
         wallet: Capitec Wallet
-        interests: Fashion And Beauty
-        resetToken: ''
-        resetTokenExpiration: ''
+        interests: Food And Drinks
     LoginUserRequest:
       title: LoginUserRequest
       required:
@@ -1751,13 +1897,13 @@ components:
         resetTokenExpiration:
           type: string
       example:
-        firstname: kwherb
-        secondname: hgfdks
-        surname: rbggrjd
+        firstname: joseph
+        secondname: cyril
+        surname: khuzwayo
         profilePicture: photo string
-        phoneNumber: '0812344915'
-        email: teboho1@gmail.com
-        password: teboho12
+        phoneNumber: '0812344965'
+        email: khuzwayo@gmail.com
+        password: joseph12
         AcceptTermsAndConditions: Yes
         locationOrAddress: Johannesburg,South Africa
         birthday: 27/09/1985
@@ -1807,7 +1953,7 @@ components:
     CreateBaitPlantRequest:
       title: CreateBaitPlantRequest
       required:
-      - name
+      - baitPlantName
       - baitPlantDescription
       - checkInStoreAvailability
       - percentageDiscount
@@ -1817,7 +1963,7 @@ components:
       - photos
       type: object
       properties:
-        name:
+        baitPlantName:
           type: string
         baitPlantDescription:
           type: string
@@ -1837,17 +1983,18 @@ components:
             type: string
           description: ''
       example:
-        name: Data Scientist
-        baitPlantDescription: Python,SQL and Analytics
-        checkInStoreAvailability: No
-        percentageDiscount: 14%
-        price: R15
-        color: Purple
-        size: Small
+        baitPlantName: Fruits Baits
+        baitPlantDescription: Fruits Baits For Everyone
+        checkInStoreAvailability: Yes
+        percentageDiscount: 13%
+        price: R800
+        color: black
+        size: large
         photos:
-        - purple image
-        - red image
-        - blue image
+        - https://images.pexels.com/photos/1128678/pexels-photo-1128678.jpeg?auto=compress&cs=tinysrgb&w=600
+        - https://images.pexels.com/photos/70746/strawberries-red-fruit-royalty-free-70746.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1
+        - https://images.pexels.com/photos/672101/pexels-photo-672101.jpeg?auto=compress&cs=tinysrgb&w=600
+        - https://images.pexels.com/photos/1153655/pexels-photo-1153655.jpeg?auto=compress&cs=tinysrgb&w=600
     UpdateBaitPlantRequest:
       title: UpdateBaitPlantRequest
       required:
@@ -1890,6 +2037,22 @@ components:
         size: Small
         photos:
         - black image
+    AddBaitToCartRequest:
+      title: AddBaitToCartRequest
+      required:
+      - totalPrice
+      - quantity
+      type: object
+      properties:
+        totalPrice:
+          type: integer
+          format: int32
+        quantity:
+          type: integer
+          format: int32
+      example:
+        totalPrice: 6
+        quantity: 3
     UpdateACategoryRequest:
       title: UpdateACategoryRequest
       required:
@@ -1919,11 +2082,10 @@ components:
         categoryName: Technology
         categoryImage: Tech Image
   securitySchemes:
-    httpBearer:
+    bearer:
       type: http
       scheme: bearer
-security:
-- httpBearer: []
+security: []
 tags:
 - name: Authentication User
 - name: Businesses
@@ -1934,4 +2096,6 @@ tags:
 - name: Admin
 - name: Bait Plants
 - name: User Profile
+- name: Cart
 - name: Categories
+- name: Payments
